--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 <a href="">Chinmaybora</a>. All rights reserved
+          &copy; 2022 <a href="https://www.instagram.com/chinmaybora/">@chinmaybora</a> all rights reserved
         </p>
 
         <ul class="footer-bottom-list">
