--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
         <ul class="social-list">
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/chinmaybora/" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/chinmaybora/" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-youtube"></ion-icon>
+            <a href="https://www.instagram.com/chinmaybora/" class="social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
